--- a/SaR_gui/templates/agent.html
+++ b/SaR_gui/templates/agent.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="/static/lib/bootstrap/bootstrap-4.4.1.min.css" crossorigin="anonymous">
 
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="/static/css/GUI.css">
+    <link rel="stylesheet" href="/static/css/sar.css">
 
     <!-- Font Awesome icons -->
     <link rel="stylesheet" href="/static/lib/fontawesome-free-5.12.0-web/css/all.css">
@@ -25,9 +25,9 @@
     <div id="matrx-toolbar" class="row toolbar bg-dark">
         <div class="col-sm">
             <img src="/static/images/matrx_logo_light.svg" alt="MATRX" id="matrx_logo">
-            <button type="button" class="btn btn-dark" id="start_button" style="display:none;"><i class="fas fa-play text-light"></i></button>
-            <button type="button" class="btn btn-dark hidden" id="pause_button" style="display:none;"><i class="fas fa-pause text-light"></i></button>
-            <button type="button" class="btn btn-dark" id="stop_button" style="display:none;"><i class="fas fa-stop text-light"></i></button>
+            <button type="button" class="btn btn-dark" id="start_button"><i class="fas fa-play text-light"></i></button>
+            <button type="button" class="btn btn-dark hidden" id="pause_button"><i class="fas fa-pause text-light"></i></button>
+            <button type="button" class="btn btn-dark" id="stop_button"><i class="fas fa-stop text-light"></i></button>
             <div class="btn-group" style="display:none;">
                 <button type="button" class="btn btn-dark dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fas fa-users"></i></button>
                 <div id="agent_dropdown" class="dropdown-menu">
@@ -62,9 +62,31 @@
                     <div class="col-md-9">
                         <div id="messages">
                         </div>
-                        <!-- For agents that can be controlled by humans, please use human-agents -->
-                        <!-- <input class="form-control" id="message_input" placeholder="Type a message">
-                        <button type="button" class="btn btn-primary" onclick="sendMessage()">Send</button> -->
+                        <input class="form-control" id="chat_form_input" placeholder="Open a chatroom first..">
+                        <button type="button" id="chat_form_submit" class="btn btn-primary" onclick="send_message(event)" disabled>Send</button>
+                        <button type="button" id="chat_form_submit" class="btn btn-primary" onclick="my_send_message_function('Extinguish')">Extinguish</button>
+                        <button type="button" id="chat_form_submit" class="btn btn-primary" onclick="my_send_message_function('Remove')">Remove</button>
+                        <button type="button" id="chat_form_submit" class="btn btn-primary" onclick="my_send_message_function('Continue')">Continue</button>
+                        <button type="button" id="chat_form_submit" class="btn btn-primary" onclick="my_send_message_function('Fire fighter')">Fire fighter</button>
+                       
+                        </div>
+                      </div>
+
+
+                    </div>
+                    <!--button type="button" id="collect_button" class="btn btn-primary" style="margin-bottom: .2em">Collected:</button-->                          
+                </div>
+            </div>
+        </div>
+
+    </div>
+
+
+    <!-- Context menu -->
+    <div class="dropdown-menu" id="contextMenu" style="display:none">
+        <a class="dropdown-item" href="#">Action 1</a>
+        <a class="dropdown-item" href="#">Action 2</a>
+    </div>
                     </div>
                 </div>
             </div>
