add icons to SHAP explanation plot

--- a/SaR_gui/templates/agent.html
+++ b/SaR_gui/templates/agent.html
@@ -53,8 +53,9 @@
         <!-- Chat -->
         <div class="collapse" id="chat">
             <div class="container-fluid">
+                <h5>Chats</h5>
                 <div class="row">
-                  <div class="col-md-3" id="chatrooms_list">
+                  <div class="col-md-3" id="chatrooms_list" style="display:none">
                     <div id="new_chat_dropdown" class="dropdown-menu"></div>
                 </div>
                     <div class="col-md-12">
