--- a/SaR_gui/templates/agent.html
+++ b/SaR_gui/templates/agent.html
@@ -33,6 +33,8 @@
                 <div id="agent_dropdown" class="dropdown-menu">
                 </div>
             </div>
+            <div id="clock" class="btn btn-dark"></div>
+            <div id="score" class="btn btn-dark"></div>
         </div>
         <div class="col-sm" align="right">
             <button type="button" class="btn btn-dark" id="chat_button" onclick="chatToggle()" data-toggle="collapse" data-target="#chat" aria-expanded="false" aria-controls="chat"><i class="fas fa-comments text-light"></i></button>
