--- a/SaR_gui/templates/agent.html
+++ b/SaR_gui/templates/agent.html
@@ -34,12 +34,9 @@
                 </div>
             </div>
             <div id="clock" class="btn btn-dark"></div>
-            <div id="score" class="btn btn-dark"></div>
         </div>
         <div class="col-sm" align="right">
             <button type="button" class="btn btn-dark" id="chat_button" onclick="chatToggle()" data-toggle="collapse" data-target="#chat" aria-expanded="false" aria-controls="chat"><i class="fas fa-comments text-light"></i></button>
-            <button type="button" class="btn btn-dark" id="draw_button" onclick="drawToggle()"><i class="fas fa-pencil-alt text-light"></i></button>
-            <button type="button" class="btn btn-dark" id="erase_button" onclick="eraseToggle()"><i class="fas fa-eraser text-light"></i></button>
         </div>
     </div>
 
@@ -63,13 +60,12 @@
                     <div class="col-md-12">
                         <div id="messages">
                         </div>
-                        <input class="form-control" id="chat_form_input" placeholder="Open a chatroom first..">
-                        <button type="button" id="chat_form_submit" class="btn btn-primary" onclick="send_message(event)" disabled>Send</button>
                         <button type="button" id="chat_form_submit" class="btn btn-primary" onclick="my_send_message_function('Extinguish')">Extinguish</button>
                         <button type="button" id="chat_form_submit" class="btn btn-primary" onclick="my_send_message_function('Remove')">Remove</button>
                         <button type="button" id="chat_form_submit" class="btn btn-primary" onclick="my_send_message_function('Continue')">Continue</button>
                         <button type="button" id="chat_form_submit" class="btn btn-primary" onclick="my_send_message_function('Fire fighter')">Fire fighter</button>
-                       
+                    </br>
+                    <img src='/static/images/fire_resistance_transparent.svg' height=200 width=200/>
                         </div>
                       </div>
 
