--- a/SaR_gui/templates/agent.html
+++ b/SaR_gui/templates/agent.html
@@ -1,6 +1,19 @@
 <!doctype html>
 <html lang="en">
 
+<style>
+    #fireResistance,
+    #duration,
+    #victims,
+    #smoke,
+    #temperature,
+    #location,
+    #distance {
+        display: inline-block;
+        margin-right: 8px; /* Adjust the margin as needed for spacing */
+    }
+</style>
+
 <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -52,20 +65,26 @@
         <!-- Chat -->
         <div class="collapse" id="chat">
             <div class="container-fluid">
-                <h5>Chats</h5>
+            </br>
+                <h6 id="fireResistance"><img src='/static/images/fire_resistance_transparent.svg' width=50/> 90 min.</h6>   
+                <h6 id="duration"> <img src='/static/images/duration_transparent.svg' width=40/> 90 min.</h6> 
+                <h6 id="victims"> <img src='/static/images/victim_transparent.svg' width=25/> 4/6</h6>
+                <h6 id="smoke"><img src='/static/images/smoke_transparent.svg' width=69/> normal</h6>
+                <h6 id="temperature"><img src='/static/images/celsius_transparent.svg' width=56/> < threshold</h6>
+                <h6 id="location"><img src='/static/images/location_transparent.svg' width=44/> unknown</h6>
+                <h6 id="distance"><img src='/static/images/distance_transparent.svg' width=70/> unknown</h6>
                 <div class="row">
                   <div class="col-md-3" id="chatrooms_list" style="display:none">
                     <div id="new_chat_dropdown" class="dropdown-menu"></div>
                 </div>
                     <div class="col-md-12">
+                        <hr style="border-top: 2px solid black;">
                         <div id="messages">
                         </div>
                         <button type="button" id="chat_form_submit" class="btn btn-primary" onclick="my_send_message_function('Extinguish')">Extinguish</button>
                         <button type="button" id="chat_form_submit" class="btn btn-primary" onclick="my_send_message_function('Remove')">Remove</button>
                         <button type="button" id="chat_form_submit" class="btn btn-primary" onclick="my_send_message_function('Continue')">Continue</button>
                         <button type="button" id="chat_form_submit" class="btn btn-primary" onclick="my_send_message_function('Fire fighter')">Fire fighter</button>
-                    </br>
-                    <img src='/static/images/fire_resistance_transparent.svg' height=200 width=200/>
                         </div>
                       </div>
 
