--- a/SaR_gui/templates/agent.html
+++ b/SaR_gui/templates/agent.html
@@ -73,12 +73,12 @@
                 <h6 id="temperature"><img src='/static/images/celsius_transparent.svg' width=56/> < threshold</h6>
                 <h6 id="location"><img src='/static/images/location_transparent.svg' width=44/> unknown</h6>
                 <h6 id="distance"><img src='/static/images/distance_transparent.svg' width=70/> unknown</h6>
+                <hr class="full-width-hr">
                 <div class="row">
                   <div class="col-md-3" id="chatrooms_list" style="display:none">
                     <div id="new_chat_dropdown" class="dropdown-menu"></div>
                 </div>
                     <div class="col-md-12">
-                        <hr style="border-top: 2px solid black;">
                         <div id="messages">
                         </div>
                         <button type="button" id="chat_form_submit" class="btn btn-primary" onclick="my_send_message_function('Extinguish')">Extinguish</button>
