--- a/SaR_gui/templates/agent.html
+++ b/SaR_gui/templates/agent.html
@@ -66,13 +66,13 @@
         <div class="collapse" id="chat">
             <div class="container-fluid">
             </br>
-                <h6 id="fireResistance"><img src='/static/images/fire_resistance_transparent.svg' width=50/></h6>   
-                <h6 id="duration"> <img src='/static/images/duration_transparent.svg' width=40/></h6> 
-                <h6 id="victims"> <img src='/static/images/victim_transparent.svg' width=25/></h6>
-                <h6 id="smoke"><img src='/static/images/smoke_transparent.svg' width=69/> normal</h6>
-                <h6 id="temperature"><img src='/static/images/celsius_transparent.svg' width=56/> < threshold</h6>
-                <h6 id="location"><img src='/static/images/location_transparent.svg' width=44/> unknown</h6>
-                <h6 id="distance"><img src='/static/images/distance_transparent.svg' width=70/> unknown</h6>
+                <h5 id="fireResistance"><img src='/static/images/fire_resistance_transparent.svg' width=50/></h5>   
+                <h5 id="duration"> <img src='/static/images/duration_transparent.svg' width=40/></h5> 
+                <h5 id="victims"> <img src='/static/images/victim_transparent.svg' width=25/></h5>
+                <h5 id="smoke"><img src='/static/images/smoke_transparent.svg' width=69/></h5>
+                <h5 id="temperature"><img src='/static/images/celsius_transparent.svg' width=56/></h5>
+                <h5 id="location"><img src='/static/images/location_transparent.svg' width=44/></h5>
+                <h5 id="distance"><img src='/static/images/distance_transparent.svg' width=70/></h5>
                 <hr class="full-width-hr">
                 <div class="row">
                   <div class="col-md-3" id="chatrooms_list" style="display:none">
