implement switching tactics situation

--- a/SaR_gui/templates/agent.html
+++ b/SaR_gui/templates/agent.html
@@ -81,10 +81,12 @@
                     <div class="col-md-12">
                         <div id="messages">
                         </div>
-                        <button type="button" id="chat_form_submit" class="btn btn-primary" onclick="my_send_message_function('Extinguish')">Extinguish</button>
-                        <button type="button" id="chat_form_submit" class="btn btn-primary" onclick="my_send_message_function('Remove')">Remove</button>
                         <button type="button" id="chat_form_submit" class="btn btn-primary" onclick="my_send_message_function('Continue')">Continue</button>
+                        <button type="button" id="chat_form_submit" class="btn btn-primary" onclick="my_send_message_function('Evacuate')">Evacuate</button>
+                        <button type="button" id="chat_form_submit" class="btn btn-primary" onclick="my_send_message_function('Extinguish')">Extinguish</button>
                         <button type="button" id="chat_form_submit" class="btn btn-primary" onclick="my_send_message_function('Fire fighter')">Fire fighter</button>
+                        <button type="button" id="chat_form_submit" class="btn btn-primary" onclick="my_send_message_function('Switch')">Switch</button>
+                        <button type="button" id="chat_form_submit" class="btn btn-primary" onclick="my_send_message_function('Remove')">Remove</button>
                         </div>
                       </div>
 
