change visual elements of task

--- a/custom_gui/templates/human_agent.html
+++ b/custom_gui/templates/human_agent.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <style>
-  #fireResistance,
+  #resistance,
   #duration,
   #victims,
   #smoke,
@@ -69,7 +69,7 @@
       <div class="collapse" id="chat">
           <div class="container-fluid">
           </br>
-              <h6 id="fireResistance"><img src='/static/images/fire_resistance_transparent.svg' width=50/> 90 min.</h6>   
+              <h6 id="resistance"><img src='/static/images/fire_resistance_transparent.svg' width=50/> 90 min.</h6>   
               <h6 id="duration"> <img src='/static/images/duration_transparent.svg' width=40/> 90 min.</h6> 
               <h6 id="victims"> <img src='/static/images/victim_transparent.svg' width=25/> 4/6</h6>
               <h6 id="smoke"><img src='/static/images/smoke_transparent.svg' width=69/> normal</h6>
