--- a/custom_gui/templates/agent.html
+++ b/custom_gui/templates/agent.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <style>
-    #fireResistance,
+    #resistance,
     #duration,
     #victims,
     #smoke,
@@ -46,7 +46,7 @@
                 <div id="agent_dropdown" class="dropdown-menu">
                 </div>
             </div>
-            <div id="clock" class="btn btn-dark"></div>
+            <!--div id="clock" class="btn btn-dark"></div-->
         </div>
         <div class="col-sm" align="right">
             <button type="button" class="btn btn-dark" id="chat_button" onclick="chatToggle()" data-toggle="collapse" data-target="#chat" aria-expanded="false" aria-controls="chat"><i class="fas fa-comments text-light"></i></button>
@@ -66,13 +66,13 @@
         <div class="collapse" id="chat">
             <div class="container-fluid">
             </br>
-                <h5 id="fireResistance"><img src='/static/images/fire_resistance_transparent.svg' width=50/></h5>   
-                <h5 id="duration"> <img src='/static/images/duration_transparent.svg' width=40/></h5> 
-                <h5 id="victims"> <img src='/static/images/victim_transparent.svg' width=25/></h5>
-                <h5 id="smoke"><img src='/static/images/smoke_transparent.svg' width=69/></h5>
-                <h5 id="temperature"><img src='/static/images/celsius_transparent.svg' width=56/></h5>
-                <h5 id="location"><img src='/static/images/location_transparent.svg' width=44/></h5>
-                <h5 id="distance"><img src='/static/images/distance_transparent.svg' width=70/></h5>
+                <h6 id="resistance"><img src='/static/images/fire_resistance_transparent.svg' width=50/></h6>   
+                <h6 id="duration"> <img src='/static/images/duration_transparent.svg' width=40/></h6> 
+                <h6 id="victims"> <img src='/static/images/victim_transparent.svg' width=25/></h6>
+                <h6 id="smoke"><img src='/static/images/smoke_transparent.svg' width=69/></h6>
+                <h6 id="temperature"><img src='/static/images/celsius_transparent.svg' width=56/></h6>
+                <h6 id="location"><img src='/static/images/location_transparent.svg' width=44/></h6>
+                <h6 id="distance"><img src='/static/images/distance_transparent.svg' width=70/></h6>
                 <hr class="full-width-hr">
                 <div class="row">
                   <div class="col-md-3" id="chatrooms_list" style="display:none">
@@ -89,6 +89,9 @@
                         <button type="button" id="chat_form_submit" class="btn btn-primary" onclick="my_send_message_function('Remove')">Remove</button>
                         </div>
                       </div>
+                <hr class="full-width-hr">
+                    <h6 style="color: black;"><img src='/static/images/manual-book.svg' width=48/> Only send in fire fighters if it is safe, extinguish first if it is safe, offensive tactic if there is still rescue chance</h6>
+                </div>
 
 
                     </div>
