--- a/custom_gui/templates/agent.html
+++ b/custom_gui/templates/agent.html
@@ -90,7 +90,7 @@
                         </div>
                       </div>
                 <hr class="full-width-hr">
-                    <h6 style="color: black;"><img src='/static/images/manual-book.svg' width=48/> Only send in fire fighters if it is safe, extinguish first if it is safe, offensive tactic if there is still rescue chance</h6>
+                    <h6 style="color: black;"><img src='/static/images/manual-book.svg' width=48/> Only send in fire fighters if safe, extinguish first if safe else evacuate first, offensive tactic if still rescue chance</h6>
                 </div>
 
 
