add 1) counterbalancing conditions and 2) logging of objective data

--- a/custom_gui/templates/agent.html
+++ b/custom_gui/templates/agent.html
@@ -82,6 +82,7 @@
                         <div id="messages">
                         </div>
                         <button type="button" id="chat_form_submit" class="btn btn-primary" onclick="my_send_message_function('Allocate to me')">Allocate to me</button>
+                        <button type="button" id="chat_form_submit" class="btn btn-primary" onclick="my_send_message_function('Allocate to robot')">Allocate to robot</button>
                         <button type="button" id="chat_form_submit" class="btn btn-primary" onclick="my_send_message_function('Continue')">Continue</button>
                         <button type="button" id="chat_form_submit" class="btn btn-primary" onclick="my_send_message_function('Evacuate')">Evacuate</button>
                         <button type="button" id="chat_form_submit" class="btn btn-primary" onclick="my_send_message_function('Extinguish')">Extinguish</button>
@@ -90,7 +91,7 @@
                         </div>
                       </div>
                 <hr class="full-width-hr">
-                    <h6 style="color: black;"><img src='/static/images/manual-book.svg' width=48/> Only send in fire fighters if safe, extinguish first if safe else evacuate first, offensive tactic if still rescue chance</h6>
+                    <h6 style="color: black;"><img src='/static/images/manual-book.svg' width=48/> Only send in fire fighters if safe; extinguish first if safe, else evacuate first; offensive tactic if still rescue chance</h6>
                 </div>
 
 
